--- a/lunatv.app.br/index.html
+++ b/lunatv.app.br/index.html
@@ -5,10 +5,10 @@
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
 	<meta charset="UTF-8">
-			<title>Luna Tv &#8211; Aqui na Luna TV voc&ecirc; consegui assistir Tudo! todos os canais liberados para voc&ecirc; curtir e relaxar, com jogo do seu tim&atilde;o favorito, s&eacute;ries e filmes.</title>
+			<title>Televizo &#8211; Aqui na Televizo voc&ecirc; consegui assistir Tudo! todos os canais liberados para voc&ecirc; curtir e relaxar, com jogo do seu tim&atilde;o favorito, s&eacute;ries e filmes.</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name='robots' content='max-image-preview:large' />
-<title>Luna Tv &#8211; Aqui na Luna TV voc&ecirc; consegui assistir Tudo! todos os canais liberados para voc&ecirc; curtir e relaxar, com jogo do seu tim&atilde;o favorito, s&eacute;ries e filmes.</title>
+<title>Luna Tv &#8211; Aqui naTelevizo voc&ecirc; consegui assistir Tudo! todos os canais liberados para voc&ecirc; curtir e relaxar, com jogo do seu tim&atilde;o favorito, s&eacute;ries e filmes.</title>
 <link rel="alternate" type="application/rss+xml" title="Luna Tv &raquo; Feed" href="feed/index.html" />
 <link rel="alternate" type="application/rss+xml" title="Luna Tv &raquo; Feed de comentários" href="comments/feed/index.html" />
 <link rel="alternate" title="oEmbed (JSON)" type="application/json+oembed" href="wp-json/oembed/1.0/embedc99a.json?url=https%3A%2F%2Flunatv.app.br%2F" />
@@ -126,7 +126,7 @@ img:is([sizes=auto i],[sizes^="auto," i]){contain-intrinsic-size:3000px 1500px}
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-48115b85 elementor-widget elementor-widget-text-editor" data-id="48115b85" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-									<p>Receba seus acessos na mesma hora e tenha 7 dias de garantia!</p>								</div>
+									<p>Receba seus acessos na mesma hora e tenha 4 horas de teste grátis!</p>								</div>
 				</div>
 					</div>
 		</div>
@@ -708,7 +708,7 @@ Você pode economizar<span style="color: #FF0000;"> <b>mais de R$ 4.098,37</b></
 								<li class="elementor-icon-list-item">
 											<span class="elementor-icon-list-icon">
 							<svg aria-hidden="true" class="e-font-icon-svg e-fas-check-circle" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"></path></svg>						</span>
-										<span class="elementor-icon-list-text">Teste de 7 dias para confirmar a qualidade da LunaTV. Não gostou? 100% do dinheiro de volta!</span>
+										<span class="elementor-icon-list-text">Teste de 4 horas para confirmar a qualidade da Televizo.</span>
 									</li>
 								<li class="elementor-icon-list-item">
 											<span class="elementor-icon-list-icon">
@@ -958,7 +958,7 @@ Você pode economizar<span style="color: #FF0000;"> <b>mais de R$ 4.098,37</b></
 														</span>
 												<a class="elementor-accordion-title" tabindex="0">QUAL O PRAZO DE GARANTIA?</a>
 					</div>
-					<div id="elementor-tab-content-6344" class="elementor-tab-content elementor-clearfix" data-tab="4" role="region" aria-labelledby="elementor-tab-title-6344"><p>Você tem 7 dias de garantia para testar a vontade! Não gostou? Não tem problema, fazemos o reembolso de 100% do valor pago. </p></div>
+					<div id="elementor-tab-content-6344" class="elementor-tab-content elementor-clearfix" data-tab="4" role="region" aria-labelledby="elementor-tab-title-6344"><p>Você tem 4 horas  para testar a vontade! Não gostou? Não tem problema, fazemos o reembolso de 100% do valor pago. </p></div>
 				</div>
 							<div class="elementor-accordion-item">
 					<div id="elementor-tab-title-6345" class="elementor-tab-title" data-tab="5" role="button" aria-controls="elementor-tab-content-6345" aria-expanded="false">
@@ -999,7 +999,7 @@ Você pode economizar<span style="color: #FF0000;"> <b>mais de R$ 4.098,37</b></
 														</span>
 												<a class="elementor-accordion-title" tabindex="0">COMO FUNCIONA A GARANTIA INCONDICIONAL?</a>
 					</div>
-					<div id="elementor-tab-content-6348" class="elementor-tab-content elementor-clearfix" data-tab="8" role="region" aria-labelledby="elementor-tab-title-6348"><p>Após o primeiro acesso do aparelho você terá 7 dias de garantia incondicional, ou seja se não gostar do que está usando faremos a devolução do aparelho e do seu dinheiro sem perguntas.</p></div>
+					<div id="elementor-tab-content-6348" class="elementor-tab-content elementor-clearfix" data-tab="8" role="region" aria-labelledby="elementor-tab-title-6348"><p> você terá 4 horas de teste incondicional, ou seja se não gostar do que está usando faremos a devolução.</p></div>
 				</div>
 								</div>
 						</div>
@@ -1022,7 +1022,7 @@ Você pode economizar<span style="color: #FF0000;"> <b>mais de R$ 4.098,37</b></
 				</div>
 				<div class="elementor-element elementor-element-2a605dcc elementor-widget elementor-widget-text-editor" data-id="2a605dcc" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-									<p>Somos uma empresa de E-commerce, Todos os direitos reservados | Importante: Esta página não tem qualquer vínculo com o Facebook S/A e suas empresas, apenas usamos a plataforma para promover os nossos produtos. Ao sair da plataforma toda responsabilidade sobre produtos vendidos e ofertados é de inteira responsabilidade da nossa empresa, bem como se houver quaisquer eventualidades legais. Declaramos que o Facebook S/A não tem qualquer vínculo de associação em processos civeis ou criminais.Nosso email de suporte é: suporte@lunadigital@gmail.com Não compre produtos piratas, não vendemos em marketplaces como: Mercado Livre, Shopee, Aliexpress, Facebook, Olx etc.Não damos suporte a produtos comprados nestes canais.</p>								</div>
+									<p>Somos uma empresa de E-commerce, Todos os direitos reservados | Importante: Esta página não tem qualquer vínculo com o Facebook S/A e suas empresas, apenas usamos a plataforma para promover os nossos produtos. Ao sair da plataforma toda responsabilidade sobre produtos vendidos e ofertados é de inteira responsabilidade da nossa empresa, bem como se houver quaisquer eventualidades legais. Declaramos que o Facebook S/A não tem qualquer vínculo de associação em processos civeis ou criminais.Nosso email de suporte é: suportetelevizo@gmail.com Não compre produtos piratas, não vendemos em marketplaces como: Mercado Livre, Shopee, Aliexpress, Facebook, Olx etc.Não damos suporte a produtos comprados nestes canais.</p>								</div>
 				</div>
 					</div>
 		</div>
