--- a/lunatv.app.br/index.html
+++ b/lunatv.app.br/index.html
@@ -143,7 +143,7 @@ img:is([sizes=auto i],[sizes^="auto," i]){contain-intrinsic-size:3000px 1500px}
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-537f4218 elementor-hidden-mobile elementor-widget elementor-widget-text-editor" data-id="537f4218" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-									<p>CONHEÇA LunaTV</p>								</div>
+									<p>CONHEÇA Televizo</p>								</div>
 				</div>
 				<div class="elementor-element elementor-element-6f4d1272 elementor-hidden-desktop elementor-widget elementor-widget-heading" data-id="6f4d1272" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
@@ -231,7 +231,7 @@ img:is([sizes=auto i],[sizes^="auto," i]){contain-intrinsic-size:3000px 1500px}
 				</div>
 				<div class="elementor-element elementor-element-7e37ba07 elementor-widget elementor-widget-text-editor" data-id="7e37ba07" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-									Com a LunaTV você paga apenas 1 vez e já tem tudo liberado.
+									Com a Televizo você paga apenas 1 vez e já tem tudo liberado.
 Você pode economizar<span style="color: #FF0000;"> <b>mais de R$ 4.098,37</b></span> por ano comparado a qualquer TV por Assinatura.								</div>
 				</div>
 					</div>
@@ -432,7 +432,7 @@ Você pode economizar<span style="color: #FF0000;"> <b>mais de R$ 4.098,37</b></
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-42e92e8c elementor-widget elementor-widget-text-editor" data-id="42e92e8c" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-									<p>Tudo isso e muito mais, por um valor simbólico. <span style="text-decoration: underline;"><strong>Só com a LunaTV</strong></span></p><p> </p>								</div>
+									<p>Tudo isso e muito mais, por um valor simbólico. <span style="text-decoration: underline;"><strong>Só com a Televizo</strong></span></p><p> </p>								</div>
 				</div>
 					</div>
 		</div>
