--- a/lunatv.app.br/index.html
+++ b/lunatv.app.br/index.html
@@ -468,7 +468,7 @@ Você pode economizar<span style="color: #FF0000;"> <b>mais de R$ 4.098,37</b></
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-5b81719a elementor-widget elementor-widget-text-editor" data-id="5b81719a" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-									<p>Você pode instalar o LunaTv em:</p>								</div>
+									<p>Você pode instalar o Televizo em:</p>								</div>
 				</div>
 				<div class="elementor-element elementor-element-25545e2d elementor-mobile-align-left elementor-align-center elementor-icon-list--layout-traditional elementor-list-item-link-full_width elementor-widget elementor-widget-icon-list" data-id="25545e2d" data-element_type="widget" data-widget_type="icon-list.default">
 				<div class="elementor-widget-container">
@@ -510,7 +510,7 @@ Você pode economizar<span style="color: #FF0000;"> <b>mais de R$ 4.098,37</b></
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-51da1eb0 elementor-widget elementor-widget-heading" data-id="51da1eb0" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-					<h2 class="elementor-heading-title elementor-size-default">O que nossos clientes dizem sobre a LunaTV! 😍</h2>				</div>
+					<h2 class="elementor-heading-title elementor-size-default">O que nossos clientes dizem sobre a Televizo! 😍</h2>				</div>
 				</div>
 					</div>
 		</div>
@@ -681,7 +681,7 @@ Você pode economizar<span style="color: #FF0000;"> <b>mais de R$ 4.098,37</b></
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-199cb968 elementor-widget elementor-widget-text-editor" data-id="199cb968" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-									<p>MOTIVOS PARA GARANTIR SUA LunaTV</p>								</div>
+									<p>MOTIVOS PARA GARANTIR SUA Televizo</p>								</div>
 				</div>
 				<section class="elementor-section elementor-inner-section elementor-element elementor-element-507d1b1b elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="507d1b1b" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
 						<div class="elementor-container elementor-column-gap-default">
@@ -926,9 +926,9 @@ Você pode economizar<span style="color: #FF0000;"> <b>mais de R$ 4.098,37</b></
 															<span class="elementor-accordion-icon-closed"><svg class="e-font-icon-svg e-fas-angle-right" viewBox="0 0 256 512" xmlns="http://www.w3.org/2000/svg"><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"></path></svg></span>
 								<span class="elementor-accordion-icon-opened"><svg class="e-font-icon-svg e-fas-angle-down" viewBox="0 0 320 512" xmlns="http://www.w3.org/2000/svg"><path d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"></path></svg></span>
 														</span>
-												<a class="elementor-accordion-title" tabindex="0">O que é a LunaTV?</a>
+												<a class="elementor-accordion-title" tabindex="0">O que é a Televizo</a>
 					</div>
-					<div id="elementor-tab-content-6341" class="elementor-tab-content elementor-clearfix" data-tab="1" role="region" aria-labelledby="elementor-tab-title-6341"><p>A LunaTV é um cartão virtual com acesso à conteúdos de TV com canais abertos e fechados ao vivo, filmes e séries.</p></div>
+					<div id="elementor-tab-content-6341" class="elementor-tab-content elementor-clearfix" data-tab="1" role="region" aria-labelledby="elementor-tab-title-6341"><p>A Televizo é um cartão virtual com acesso à conteúdos de TV com canais abertos e fechados ao vivo, filmes e séries.</p></div>
 				</div>
 							<div class="elementor-accordion-item">
 					<div id="elementor-tab-title-6342" class="elementor-tab-title" data-tab="2" role="button" aria-controls="elementor-tab-content-6342" aria-expanded="false">
