--- a/lunatv.app.br/index.html
+++ b/lunatv.app.br/index.html
@@ -588,7 +588,7 @@ Você pode economizar<span style="color: #FF0000;"> <b>mais de R$ 4.098,37</b></
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-16038200 elementor-widget elementor-widget-heading" data-id="16038200" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-					<h2 class="elementor-heading-title elementor-size-default">A LunaTv é para você que:</h2>				</div>
+					<h2 class="elementor-heading-title elementor-size-default">A Televizo é para você que:</h2>				</div>
 				</div>
 					</div>
 		</div>
