--- a/lunatv.app.br/index.html
+++ b/lunatv.app.br/index.html
@@ -842,7 +842,7 @@ Você pode economizar<span style="color: #FF0000;"> <b>mais de R$ 4.098,37</b></
 				<div class="elementor-element elementor-element-5b6f0c5 elementor-align-center elementor-widget elementor-widget-button" data-id="5b6f0c5" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.cakto.com.br/3c7zc6g?affiliate=B7fGsk5S">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.cakto.com.br/kutv5to_676711">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">QUERO ESSE AQUI!</span>
 					</span>
@@ -861,7 +861,7 @@ Você pode economizar<span style="color: #FF0000;"> <b>mais de R$ 4.098,37</b></
 				<div class="elementor-element elementor-element-b6bb4ff elementor-align-center elementor-widget elementor-widget-button" data-id="b6bb4ff" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.cakto.com.br/g8mgvc2?affiliate=B7fGsk5S">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.cakto.com.br/jczqamb">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">QUERO ESSE AQUI!</span>
 					</span>
