--- a/lunatv.app.br/index.html
+++ b/lunatv.app.br/index.html
@@ -838,27 +838,59 @@ Você pode economizar<span style="color: #FF0000;"> <b>mais de R$ 4.098,37</b></
 						<div class="elementor-element elementor-element-2ec56ef elementor-widget elementor-widget-image" data-id="2ec56ef" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
 															<div style="max-width:1080px; margin:0 auto; text-align:center;">
-  <img loading="lazy" decoding="async" width="1080" height="1350"
-       src="https://iili.io/fIvmy6G.png"
-       class="attachment-full size-full wp-image-523"
-       alt="Plano Mensal R$23,99"
-       style="width:100%; height:auto; display:block;">
-  <div style="margin-top:18px;">
-    <a href="https://pay.cakto.com.br/kutv5to_676711"
-       style="
-         display:inline-block;
-         background:#1fbf3a;
-         color:#fff;
-         padding:14px 26px;
-         border-radius:6px;
-         text-decoration:none;
-         font-weight:700;
-         box-shadow:0 6px 12px rgba(0,0,0,0.12);
-       ">
-      QUERO ESSE AQUI!
-    </a>
-  </div>
+  <div style="
+    max-width: 700px;
+    margin: 40px auto;
+    background: #ff0000;
+    padding: 40px 20px;
+    border-radius: 12px;
+    text-align: center;
+    color: #fff;
+">
+    <h2 style="font-size: 42px; margin: 0;">Plano Mensal</h2>
+    <p style="font-size: 20px; margin-top: 8px;">1 mês de acesso completo</p>
+
+    <div style="font-size: 70px; font-weight: bold; margin-top: 20px;">
+        R$ <span style="font-size: 90px;">23</span>,99
+    </div>
 </div>
+
+<div style="
+    max-width: 700px;
+    margin: 0 auto 20px auto;
+    background: #fff;
+    padding: 30px 25px;
+    border-radius: 12px;
+    font-size: 20px;
+    line-height: 1.6;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+">
+    <ul style="padding: 0; list-style: none; margin: 0;">
+        <li>✔ 2 mil canais (abertos e fechados)</li>
+        <li>✔ Mais de 40 mil séries e filmes</li>
+        <li>✔ Assista em qualquer dispositivo</li>
+        <li>✔ Alta qualidade de som e imagem</li>
+        <li>✔ Não precisa de antena, apenas internet!</li>
+    </ul>
+
+    <div style="text-align: center; margin-top: 25px;">
+        <a href="https://pay.cakto.com.br/kutv5to_676711"
+           style="
+             display: inline-block;
+             background: #00a82d;
+             padding: 14px 30px;
+             color: #fff;
+             font-size: 20px;
+             font-weight: bold;
+             border-radius: 8px;
+             text-decoration: none;
+             box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+           ">
+            QUERO ESSE AQUI!
+        </a>
+    </div>
+</div>
+
 				</div>
 					</div>
 		</div>
