Update payment links in index.html

--- a/lunatv.app.br/index.html
+++ b/lunatv.app.br/index.html
@@ -878,7 +878,7 @@ Você pode economizar<span style="color: #FF0000;"> <b>mais de R$ 4.098,37</b></
                     </ul>
 
                     <div style="text-align:center; margin-top:20px;">
-                        <a href="https://pay.cakto.com.br/fziv2ve?affiliate=B7fGsk5S"
+                        <a href="https://pay.cakto.com.br/kutv5to_676711"
                            style="display:inline-block; background:#00a82d; padding:12px 26px; color:#fff; font-size:18px; font-weight:bold; border-radius:8px; text-decoration:none; box-shadow:0 6px 12px rgba(0,0,0,0.15);">
                             QUERO ESSE AQUI!
                         </a>
@@ -904,7 +904,7 @@ Você pode economizar<span style="color: #FF0000;"> <b>mais de R$ 4.098,37</b></
                     </ul>
 
                     <div style="text-align:center; margin-top:20px;">
-                        <a href="https://pay.cakto.com.br/fziv2ve?affiliate=B7fGsk5S"
+                        <a href="https://pay.cakto.com.br/jczqamb"
                            style="display:inline-block; background:#00a82d; padding:12px 26px; color:#fff; font-size:18px; font-weight:bold; border-radius:8px; text-decoration:none; box-shadow:0 6px 12px rgba(0,0,0,0.15);">
                             QUERO O PLANO ANUAL!
                         </a>
