Update button text to 'QUERO O PLANO MENSAL!'

--- a/lunatv.app.br/index.html
+++ b/lunatv.app.br/index.html
@@ -880,7 +880,7 @@ Você pode economizar<span style="color: #FF0000;"> <b>mais de R$ 4.098,37</b></
                     <div style="text-align:center; margin-top:20px;">
                         <a href="https://pay.cakto.com.br/kutv5to_676711"
                            style="display:inline-block; background:#00a82d; padding:12px 26px; color:#fff; font-size:18px; font-weight:bold; border-radius:8px; text-decoration:none; box-shadow:0 6px 12px rgba(0,0,0,0.15);">
-                            QUERO ESSE AQUI!
+                            QUERO O PLANO MENSAL!
                         </a>
                     </div>
                 </div>
