--- a/lunatv.app.br/index.html
+++ b/lunatv.app.br/index.html
@@ -191,9 +191,9 @@ img:is([sizes=auto i],[sizes^="auto," i]){contain-intrinsic-size:3000px 1500px}
 				<div class="elementor-element elementor-element-1ad47b4d elementor-mobile-align-center elementor-align-center elementor-widget elementor-widget-button" data-id="1ad47b4d" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-				<a class="elementor-button elementor-button-link elementor-size-sm"
-   href="#preco"
-   onclick="scrollToPlans(); return false;">
+	<a href="https://wa.me/5561986555274?text=Quero%20Meu%20Acesso%20agora!"
+   target="_blank"
+   rel="nofollow noopener"> 
   <span class="elementor-button-content-wrapper">
     <span class="elementor-button-icon">
       <svg aria-hidden="true" class="e-font-icon-svg e-far-arrow-alt-circle-down" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm-32-316v116h-67c-10.7 0-16 12.9-8.5 20.5l99 99c4.7 4.7 12.3 4.7 17 0l99-99c7.6-7.6 2.2-20.5-8.5-20.5h-67V140c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12z"/></svg>
