--- a/lunatv.app.br/index.html
+++ b/lunatv.app.br/index.html
@@ -736,11 +736,12 @@ Você pode economizar<span style="color: #FF0000;"> <b>mais de R$ 4.098,37</b></
 				<div class="elementor-element elementor-element-486f6265 elementor-align-center elementor-mobile-align-center elementor-widget-mobile__width-inherit elementor-widget elementor-widget-button" data-id="486f6265" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-grow" href="#preco">
-						<span class="elementor-button-content-wrapper">
-									<span class="elementor-button-text">ADQUIRA O SEU AGORA!</span>
-					</span>
-					</a>
+				<a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-grow"
+   href="https://api.whatsapp.com/send?phone=5561986555274&text=Quero%20meu%20acesso!">
+    <span class="elementor-button-content-wrapper">
+        <span class="elementor-button-text">ADQUIRA O SEU AGORA!</span>
+    </span>
+</a>
 				</div>
 								</div>
 				</div>
