Add TELEVIZO product section to index.html
Added product section for TELEVIZO multimedia device with details and WhatsApp link.

--- a/lunatv.app.br/index.html
+++ b/lunatv.app.br/index.html
@@ -475,6 +475,51 @@ Você pode economizar<span style="color: #FF0000;"> <b>mais de R$ 4.098,37</b></
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-75419925 elementor-widget elementor-widget-text-editor" data-id="75419925" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
+
+					-------------------- LINK PRODUTO ------------ 
+
+					<section class="produto-televizo">
+  <div class="produto-container">
+
+    <div class="produto-imagem">
+      <img src="https://iili.io/fuVxItV.png" alt="Central multimídia TELEVIZO com múltiplos aplicativos">
+    </div>
+
+    <div class="produto-info">
+      <h2>Central Multimídia TELEVIZO</h2>
+
+      <p>
+        Transforme sua TV comum em uma central completa de entretenimento.  
+        O dispositivo TELEVIZO oferece mais estabilidade, velocidade e praticidade
+        para acessar os seus aplicativos de streaming favoritos.
+      </p>
+
+      <ul>
+        <li>✅ Suporte para apps de streaming </li>
+        <li>✅ Interface simples e fácil para toda a família</li>
+        <li>✅ Menos travamentos e mais estabilidade</li>
+        <li>✅ Conexão HDMI — compatível com TVs, monitores e projetores</li>
+        <li>✅ Acompanha controle remoto</li>
+		<li>✅ Sistema ANTI-TRAVAMENTO Exclusivo</li>
+		<li>✅ Qualidade Ultra HD 8K </li>
+      </ul>
+
+      <p class="produto-aviso">
+        ✅ ACESSO VITALÍCIO:
+		✅ MAIS DE 2 MIL CANAIS
+      </p>
+
+      <a href="https://wa.me/5561986555274?text=Quero%20saber%20mais%20sobre%20o%20APARELHOTELEVIZO" 
+         class="btn-whatsapp">
+        Falar no WhatsApp
+      </a>
+    </div>
+
+  </div>
+</section>
+--------------------------------- FIM DO LINK --------------- 
+
+					
 									<p>É MUITO FÁCIL DE USAR</p>								</div>
 				</div>
 				<section class="elementor-section elementor-inner-section elementor-element elementor-element-77ada9c0 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="77ada9c0" data-element_type="section">
