--- a/lunatv.app.br/index.html
+++ b/lunatv.app.br/index.html
@@ -484,7 +484,66 @@ Você pode economizar<span style="color: #FF0000;"> <b>mais de R$ 4.098,37</b></
     <div class="produto-imagem">
       <img src="https://iili.io/fuVxItV.png" alt="Central multimídia TELEVIZO com múltiplos aplicativos">
     </div>
+<p>Acesso Vitálicio</p>								</div>
+				</div>
+				<section class="elementor-section elementor-inner-section elementor-element elementor-element-77ada9c0 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="77ada9c0" data-element_type="section">
+						<div class="elementor-container elementor-column-gap-default">
+					<div class="elementor-column elementor-col-100 elementor-inner-column elementor-element elementor-element-54908699" data-id="54908699" data-element_type="column">
+			<div class="elementor-widget-wrap elementor-element-populated">
+						<div class="elementor-element elementor-element-71568a81 elementor-widget elementor-widget-text-editor" data-id="71568a81" data-element_type="widget" data-widget_type="text-editor.default">
+				<div class="elementor-widget-container">
+									<p>Você recebe seu código de acesso, logo após a compra, junto com o manual de instalação! Estes acessos serão enviados no seu WhatsApp, no numero que você colocar em seu cadastro no momento da compra.</p><p> Nosso suporte te acompanha durante todo o processo de instalação em seus dispositivos!</p>								</div>
+				</div>
+					</div>
+		</div>
+					</div>
+		</section>
+				<section class="elementor-section elementor-inner-section elementor-element elementor-element-7cc5847f elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="7cc5847f" data-element_type="section">
+						<div class="elementor-container elementor-column-gap-default">
+					<div class="elementor-column elementor-col-100 elementor-inner-column elementor-element elementor-element-432513c3" data-id="432513c3" data-element_type="column">
+			<div class="elementor-widget-wrap elementor-element-populated">
+						<div class="elementor-element elementor-element-5b81719a elementor-widget elementor-widget-text-editor" data-id="5b81719a" data-element_type="widget" data-widget_type="text-editor.default">
+				<div class="elementor-widget-container">
+									<p>✅ Suporte para apps de streaming</p>								</div>
+				</div>
+				<div class="elementor-element elementor-element-25545e2d elementor-mobile-align-left elementor-align-center elementor-icon-list--layout-traditional elementor-list-item-link-full_width elementor-widget elementor-widget-icon-list" data-id="25545e2d" data-element_type="widget" data-widget_type="icon-list.default">
+				<div class="elementor-widget-container">
+							<ul class="elementor-icon-list-items">
+							<li class="elementor-icon-list-item">
+											<span class="elementor-icon-list-icon">
+							<svg aria-hidden="true" class="e-font-icon-svg e-fas-plus-circle" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"></path></svg>						</span>
+										<span class="elementor-icon-list-text">✅ Interface simples e fácil para toda a família </span>
+									</li>
+								<li class="elementor-icon-list-item">
+											<span class="elementor-icon-list-icon">
+							<svg aria-hidden="true" class="e-font-icon-svg e-fas-plus-circle" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"></path></svg>						</span>
+										<span class="elementor-icon-list-text">✅ Menos travamentos e mais estabilidade</span>
+									</li>
+								<li class="elementor-icon-list-item">
+											<span class="elementor-icon-list-icon">
+							<svg aria-hidden="true" class="e-font-icon-svg e-fas-plus-circle" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"></path></svg>						</span>
+										<span class="elementor-icon-list-text">✅ Conexão HDMI — compatível com TVs &amp; monitores e projetores</span>
+									</li>
+								<li class="elementor-icon-list-item">
+											<span class="elementor-icon-list-icon">
+							<svg aria-hidden="true" class="e-font-icon-svg e-fas-plus-circle" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"></path></svg>						</span>
+										<span class="elementor-icon-list-text">✅ Acompanha controle remoto &amp; Sistema Anti-trava<br>Qualidade 8k &amp; hdmi</span>
+									</li>
 
+								<div class="produto-preco">
+  <span class="preco-label">Oferta especial</span>
+
+  <div class="preco-box">
+    <span class="preco-valor">R$ 260</span>
+    <span class="preco-detalhe">à vista</span>
+  </div>
+
+  <p class="preco-sub">
+    Estoque limitado • Envio imediato
+  </p>
+</div>
+
+								
     <
 --------------------------------- FIM DO LINK --------------- 
 
