--- a/lunatv.app.br/index.html
+++ b/lunatv.app.br/index.html
@@ -492,7 +492,7 @@ Você pode economizar<span style="color: #FF0000;"> <b>mais de R$ 4.098,37</b></
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-71568a81 elementor-widget elementor-widget-text-editor" data-id="71568a81" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-									<p>Você recebe seu código de acesso, logo após a compra, junto com o manual de instalação! Estes acessos serão enviados no seu WhatsApp, no numero que você colocar em seu cadastro no momento da compra.</p><p> Nosso suporte te acompanha durante todo o processo de instalação em seus dispositivos!</p>								</div>
+									<p>Com o TELEVIZO, você transforma sua TV em um centro de diversão sem limites e, o melhor de tudo, SEM MENSALIDADES! Imagine ter acesso VITALÍCIO aos seus canais, filmes e séries favoritos.</p><p> Nosso suporte te acompanha durante todo o processo de instalação em seus dispositivos!</p>								</div>
 				</div>
 					</div>
 		</div>
@@ -512,30 +512,30 @@ Você pode economizar<span style="color: #FF0000;"> <b>mais de R$ 4.098,37</b></
 							<li class="elementor-icon-list-item">
 											<span class="elementor-icon-list-icon">
 							<svg aria-hidden="true" class="e-font-icon-svg e-fas-plus-circle" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"></path></svg>						</span>
-										<span class="elementor-icon-list-text">✅ Interface simples e fácil para toda a família </span>
+										<span class="elementor-icon-list-text">Interface simples e fácil para toda a família</span>
 									</li>
 								<li class="elementor-icon-list-item">
 											<span class="elementor-icon-list-icon">
 							<svg aria-hidden="true" class="e-font-icon-svg e-fas-plus-circle" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"></path></svg>						</span>
-										<span class="elementor-icon-list-text">✅ Menos travamentos e mais estabilidade</span>
+										<span class="elementor-icon-list-text">Menos travamentos e mais estabilidade</span>
 									</li>
 								<li class="elementor-icon-list-item">
 											<span class="elementor-icon-list-icon">
 							<svg aria-hidden="true" class="e-font-icon-svg e-fas-plus-circle" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"></path></svg>						</span>
-										<span class="elementor-icon-list-text">✅ Conexão HDMI — compatível com TVs &amp; monitores e projetores</span>
+										<span class="elementor-icon-list-text">Conexão HDMI — compatível com TVs, monitores e projetores</span>
 									</li>
 								<li class="elementor-icon-list-item">
 											<span class="elementor-icon-list-icon">
 							<svg aria-hidden="true" class="e-font-icon-svg e-fas-plus-circle" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"></path></svg>						</span>
-										<span class="elementor-icon-list-text">✅ Acompanha controle remoto &amp; Sistema Anti-trava<br>Qualidade 8k &amp; hdmi</span>
+										<span class="elementor-icon-list-text">Acompanha controle remoto &amp; Sistema Anti-trava<br>Qualidade 8k</span>
 									</li>
 
 								<div class="produto-preco">
-  <span class="preco-label">Oferta especial</span>
+  
 
   <div class="preco-box">
-    <span class="preco-valor">R$ 260</span>
-    <span class="preco-detalhe">à vista</span>
+    
+    
   </div>
 
   <p class="preco-sub">
