--- a/lunatv.app.br/index.html
+++ b/lunatv.app.br/index.html
@@ -778,7 +778,7 @@ Você pode economizar<span style="color: #FF0000;"> <b>mais de R$ 4.098,37</b></
 				</div>
 				<div class="elementor-element elementor-element-2fb615ad elementor-widget elementor-widget-text-editor" data-id="2fb615ad" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-									<p>Finalizando o seu pedido, você receberá o seu LunaTV e tudo que precisa para instalar o seu sistema no e-mail </p>								</div>
+									<p>Finalizando o seu pedido, você receberá o seu Televizo e tudo que precisa para instalar o seu sistema no e-mail </p>								</div>
 				</div>
 				<section class="elementor-section elementor-inner-section elementor-element elementor-element-3a094164 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="3a094164" data-element_type="section">
 						<div class="elementor-container elementor-column-gap-default">
