--- a/lunatv.app.br/index.html
+++ b/lunatv.app.br/index.html
@@ -139,41 +139,55 @@ img:is([sizes=auto i],[sizes^="auto," i]){contain-intrinsic-size:3000px 1500px}
 
 <style>
 /* Estilos para o container de notificação */
-#notification-container {
+#notification-container{
     position: fixed;
+    left: 12px;
     bottom: 20px;
-    left: 20px;
-    background-color: #38a169;
-    color: white;
-    padding: 10px 15px;
-    border-radius: 8px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-    display: none;
+    max-width: 280px;          /* DIMINUI O TAMANHO NO MOBILE */
+    background: #2ba84a;
+    color: #fff;
+    padding: 10px 14px;
+    border-radius: 10px;
+    font-size: 13px;
+    box-shadow: 0 4px 12px rgba(0,0,0,.25);
+    display: flex;
     flex-direction: column;
-    z-index: 100001;
-    max-width: 300px;
-    font-family: Arial, sans-serif;
-    animation: fadeInOut 8s ease-in-out;
+    gap: 4px;
+    z-index: 9999;
+    opacity: 0;
+    transform: translateY(10px);
+    pointer-events: none;
+    transition: opacity .35s ease, transform .35s ease;
 }
 
-#notification-header {
+#notification-container.is-visible{
+    opacity: 1;
+    transform: translateY(0);
+}
+
+/* "Compra Realizada" estilo badge */
+#notification-container .badge{
+    background: #1c772e;
+    padding: 3px 10px;
+    border-radius: 20px;
     font-weight: bold;
-    margin-bottom: 5px;
-    font-size: 0.9em;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-    padding-bottom: 3px;
+    font-size: 12px;
 }
 
-#notification-body {
-    font-size: 0.8em;
+/* Ajuste específico só para celulares */
+@media (max-width: 480px){
+    #notification-container{
+        max-width: 240px;     /* ainda menor para telas pequenas */
+        padding: 8px 12px;
+        font-size: 12px;
+    }
+
+    #notification-container .badge{
+        font-size: 11px;
+        padding: 3px 8px;
+    }
 }
 
-@keyframes fadeInOut {
-    0% { opacity: 0; transform: translateX(-50px); }
-    10% { opacity: 1; transform: translateX(0); }
-    90% { opacity: 1; transform: translateX(0); }
-    100% { opacity: 0; transform: translateX(-50px); }
-}
 </style>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" /></head>
